7. ListIterator [#350217 #388631]